--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
         - LDC2D_steady: zh/examples/ldc2d_steady.md
         - LDC2D_unsteady: zh/examples/ldc2d_unsteady.md
         - Cylinder2D_unsteady: zh/examples/cylinder2d_unsteady.md
+        - Cylinder3D_unsteady: zh/examples/3d_unsteady_discrete.md
         - Laplace2D: zh/examples/laplace2d.md
       - 数据驱动:
         - FourCastNet: zh/examples/fourcastnet.md
