--- a/examples/DrivAerNet/conf/DriveAerNet.yaml
+++ b/examples/DrivAerNet/conf/DriveAerNet.yaml
@@ -20,7 +20,7 @@ hydra:
     subdir: ./
 
 # general settings
-mode: eval
+mode: train
 seed: 1
 output_dir: ${hydra:run.dir}
 log_freq: 100
@@ -41,11 +41,12 @@ TRAIN:
   seed: 1
   num_points: 5000
   epochs: 100
-  num_workers: 32
+  num_workers: 2
   eval_during_train: True
   train_ids_file: "train_design_ids.txt"
   eval_ids_file: "val_design_ids.txt"
-  batch_size: 32
+  batch_size: 1
+  train_fractions: 0.2
   scheduler:
     mode: "min"
     patience: 20
@@ -55,11 +56,11 @@ TRAIN:
 # evaluation settings
 EVAL:
   num_points: 5000
-  batch_size: 1
+  batch_size: 2
   pretrained_model_path: "CdPrediction_DrivAerNet_r2_100epochs_5k_best_model.pdparams"
   eval_with_no_grad: True
   ids_file: "test_design_ids.txt"
-  num_workers: 32
+  num_workers: 0
 
 ARGS:
   cuda: True
